objects/Platform_Content__c.object
<CustomObject>
    <description>Object to store platform data on CBC 3 level, including PAM/TAM etc</description>
    <fields>
        <fullName>ACP_Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox  for TE being on the Approved Vendor List for the product group</description>
        <inlineHelpText>check this box if TE is approved as a vendor for that product group</inlineHelpText>
        <label>AVL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBC1__c</fullName>
        <label>CBC 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC2__c</fullName>
        <label>CBC 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC3__c</fullName>
        <label>CBC3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC_1__c</fullName>
        <description>CBC1 description values - This is not used.</description>
        <label>CBC 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADC Telecom</fullName>
                </value>
                <value>
                    <fullName>Aerospace Defense &amp; Marine</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Application Tooling</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Circuit Protection</fullName>
                </value>
                <value>
                    <fullName>Data and Devices</fullName>
                </value>
                <value>
                    <fullName>ENERGY</fullName>
                </value>
                <value>
                    <fullName>Enterprise LTE</fullName>
                </value>
                <value>
                    <fullName>Enterprise Networks</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Industrial &amp; Commercial Transportation</fullName>
                </value>
                <value>
                    <fullName>Reduction of Cost</fullName>
                </value>
                <value>
                    <fullName>Sensors Products</fullName>
                </value>
                <value>
                    <fullName>Supply</fullName>
                </value>
                <value>
                    <fullName>Telecom LTE</fullName>
                </value>
                <value>
                    <fullName>Touch Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBC_2__c</fullName>
        <description>This field is not used anywhere</description>
        <label>CBC 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;C Products</fullName>
                </value>
                <value>
                    <fullName>APPLIANCES GENERAL PURPOSE RELAYS</fullName>
                </value>
                <value>
                    <fullName>Aero Defense Marine</fullName>
                </value>
                <value>
                    <fullName>Cable Assemblies</fullName>
                </value>
                <value>
                    <fullName>Commercial &amp; Industrial Vehicles</fullName>
                </value>
                <value>
                    <fullName>DAT</fullName>
                </value>
                <value>
                    <fullName>DND - Board to Board</fullName>
                </value>
                <value>
                    <fullName>HUB PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>IB products</fullName>
                </value>
                <value>
                    <fullName>Integrated Products</fullName>
                </value>
                <value>
                    <fullName>MAGNET WIRE</fullName>
                </value>
                <value>
                    <fullName>NON PPTC</fullName>
                </value>
                <value>
                    <fullName>PPTC</fullName>
                </value>
                <value>
                    <fullName>Power Interconnects</fullName>
                </value>
                <value>
                    <fullName>RAST</fullName>
                </value>
                <value>
                    <fullName>RAW MATERIAL Touch Systems</fullName>
                </value>
                <value>
                    <fullName>Rail products</fullName>
                </value>
                <value>
                    <fullName>SYSTEMS</fullName>
                </value>
                <value>
                    <fullName>Signal Interconnects</fullName>
                </value>
                <value>
                    <fullName>TERMINALS &amp; SPLICES</fullName>
                </value>
                <value>
                    <fullName>Terminals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBC_3__c</fullName>
        <label>CBC 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;C CCAO</fullName>
                </value>
                <value>
                    <fullName>Appl Assm Switches</fullName>
                </value>
                <value>
                    <fullName>Board Conn</fullName>
                </value>
                <value>
                    <fullName>CONNECTORS</fullName>
                </value>
                <value>
                    <fullName>Control Cabinet Conn</fullName>
                </value>
                <value>
                    <fullName>DND BTB - Strada Whisp</fullName>
                </value>
                <value>
                    <fullName>Field Conn - IND Comms</fullName>
                </value>
                <value>
                    <fullName>Filters</fullName>
                </value>
                <value>
                    <fullName>Gen Purp Relays-OEG</fullName>
                </value>
                <value>
                    <fullName>IB Cable Assemblies</fullName>
                </value>
                <value>
                    <fullName>IB Connectivity</fullName>
                </value>
                <value>
                    <fullName>IB Value Added Assembl</fullName>
                </value>
                <value>
                    <fullName>ICC</fullName>
                </value>
                <value>
                    <fullName>IDS</fullName>
                </value>
                <value>
                    <fullName>MAGNET WIRE</fullName>
                </value>
                <value>
                    <fullName>Motor Conn</fullName>
                </value>
                <value>
                    <fullName>NON PPTC</fullName>
                </value>
                <value>
                    <fullName>Open Barrel Products</fullName>
                </value>
                <value>
                    <fullName>Other (ICT)</fullName>
                </value>
                <value>
                    <fullName>Other Touchscreen RM</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>RAST</fullName>
                </value>
                <value>
                    <fullName>Rail Cable Systems</fullName>
                </value>
                <value>
                    <fullName>Rail P&amp;S</fullName>
                </value>
                <value>
                    <fullName>Soft-Shell</fullName>
                </value>
                <value>
                    <fullName>Solar Products</fullName>
                </value>
                <value>
                    <fullName>Switches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Main_Competitor_Share__c</fullName>
        <description>shows the market share of the main competitor</description>
        <label>Main Competitor Share %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Main_Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>main competitor for the selected product</description>
        <label>Main Competitor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Platform Contents</relationshipLabel>
        <relationshipName>Platform_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAM__c</fullName>
        <description>PAM of the platform for the selected product group, manual data entry</description>
        <label>PAM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAM_per_unit__c</fullName>
        <description>PAM per unit. E.g. for a train this would be PAM per car</description>
        <inlineHelpText>PAM per unit in USD. E.g. for a train this would be PAM per car</inlineHelpText>
        <label>PAM per unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Opportunity__c</fullName>
        <description>lookup to the Program opportunity we want to list the platform content for</description>
        <label>Program Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must link the platform content to a Program opportunity.</errorMessage>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Program</value>
            </filterItems>
            <infoMessage>Please search for the name of an opportunity of type &apos;Program&apos;.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Platform Contents</relationshipLabel>
        <relationshipName>Platform_Contents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SAM__c</fullName>
        <description>SAM of the selected product , manual data entry</description>
        <label>SAM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TAM_CY__c</fullName>
        <label>TAM CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TAM_LY__c</fullName>
        <label>TAM LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TAM_NY__c</fullName>
        <label>TAM NY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TAM__c</fullName>
        <description>TAM of the selected product group, manual data entry</description>
        <label>TAM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TAM_per_unit__c</fullName>
        <description>TAM value per unit. E.g. for a train this is the TAM per car.</description>
        <inlineHelpText>TAM value in USD per unit. E.g. for a train this is the TAM per car.</inlineHelpText>
        <label>TAM per unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TE_MS_Trend__c</fullName>
        <description>the trend of the TE market share</description>
        <label>TE MS Trend</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TE_MS__c</fullName>
        <description>the TE market share for the selected product</description>
        <inlineHelpText>TE Market share for the selected product</inlineHelpText>
        <label>TE MS %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_PAM_calculated__c</fullName>
        <description>The total PAM, calculated by PAM per unit multiplied by number of units</description>
        <formula>PAM_per_unit__c *  Program_Opportunity__r.Number_of_units_per_year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total PAM, calculated by PAM per unit multiplied by number of units</inlineHelpText>
        <label>Total PAM (calculated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_PAM_per_product_for_application__c</fullName>
        <description>PAM per unit x number of units x number of end application</description>
        <formula>PAM_per_unit__c *  Program_Opportunity__r.Number_of_units_per_year__c *  Program_Opportunity__r.Number_of_end_application__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PAM per unit x number of units x number of end application</inlineHelpText>
        <label>Total PAM per product for application</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_TAM_calculated__c</fullName>
        <description>Total TAM, calculated by TAM per unit multiplied by number of units</description>
        <formula>TAM_per_unit__c *  Program_Opportunity__r.Number_of_units_per_year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total TAM, calculated by TAM per unit multiplied by number of units</inlineHelpText>
        <label>Total TAM (calculated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_TAM_per_product_for_application__c</fullName>
        <description>TAM per unit x number of units x number of end application</description>
        <formula>TAM_per_unit__c *  Program_Opportunity__r.Number_of_units_per_year__c *  Program_Opportunity__r.Number_of_end_application__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>TAM per unit x number of units x number of end application</inlineHelpText>
        <label>Total TAM per product for application</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Platform Content</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CBC_1__c</columns>
        <columns>CBC_2__c</columns>
        <columns>CBC_3__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Platform Content</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>